# autotriage

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  action.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  triage.yml
docs/: CODE_TOUR.md  USAGE.md  architecture.md  configuration.md  data-contracts.md  deployment.md  escalation-policy.md  eval-methodology.md  fix-validation.md  live-demo.md  operations.md  risk-summary-sample.md  security-posture.md  threat-model.md
docs/adr/: 0001-record-architecture-decisions.md  0002-normalized-finding-contract.md  0003-forced-tool-call-for-structured-output.md  0004-confidence-guardrail-and-fail-closed.md  0005-dual-backend-sdk-and-messages-api.md  0006-treat-scanner-output-as-untrusted.md  README.md
docs/runbooks/: incident-response.md  rollback.md  running.md  troubleshooting.md
docs/tapes/: eval.tape  help.tape  tests.tape
evals/: labeled_findings.json  run_eval.py
examples/: README.md  TRACKER.md  real-scan.findings.json  report.md
examples/fix-validation/: findings.json  patches.json  report.md
examples/prs/: iac-s3noenc-013.pr.md  iac-sgopen-012.pr.md  sast-cmdinj-003.pr.md  sast-eval-004.pr.md  sast-flaskdebug-007.pr.md  sast-md5-005.pr.md  sast-pickle-006.pr.md  sca-pyyaml-009.pr.md  sca-requests-008.pr.md
examples/tickets/: iac-s3noenc-013.md  iac-s3public-011.md  iac-sgopen-012.md  sast-cmdinj-003.md  sast-eval-004.md  sast-flaskdebug-007.md  sast-md5-005.md  sast-pickle-006.md  sast-sqli-001.md  sca-flask-010.md  sca-pyyaml-009.md  sca-requests-008.md
fixtures/: findings.sample.json
src/autotriage/: __init__.py  __main__.py  agent.py  config.py  eval_harness.py  observability.py  prompts.py  report.py  revalidate.py  scanners.py  schema.py  stub.py  tools.py
tests/: __init__.py  conftest.py  test_agent.py  test_cli.py  test_eval.py  test_golden.py  test_report.py  test_revalidate.py  test_scanners.py  test_schema.py  test_stub.py
tests/integration/: __init__.py  test_end_to_end.py
tests/property/: __init__.py  test_scanner_properties.py  test_schema_properties.py
